--- a/basket-splitter/pom.xml
+++ b/basket-splitter/pom.xml
@@ -25,6 +25,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -70,6 +75,6 @@
                     <version>3.0.0</version>
                 </plugin>
             </plugins>
-            </pluginManagement>
+        </pluginManagement>
     </build>
 </project>
